--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</div>
 	  <nav class="main_menu"> 
 	<div class="container-fluid logotipo">	
-		<a href="http://www.godifferent.pt/" class="nav-home">
+		<a href="https://ruifox.github.io/page/" class="nav-home">
 			<div class="logo_text" ><span class="logo_1">go</span><span class="logo_2">different</span></div>
 			<div class="logo_img not_logo_img"><img src="img/logo_white.svg"></div>
 		</a>
@@ -46,7 +46,7 @@
 	<script>document.documentElement.className = 'js';</script>
 	<section class="header_container">
 	 <video loop muted autoplay class="full_bg_video">  
-       		<source src="untitled.mp4" type="video/mp4">
+       		<source src="Untitled.mp4" type="video/mp4">
    	 </video>
         <div class="inicio">
 		<header>
